# gaming-tools

./: LICENCE  Makefile  README.md  TODO  main.rs  workspace.code-workspace
lib/base/: Cargo.toml
lib/base/src/: board.rs  game.rs  lib.rs  model.rs
lib/board/: Cargo.toml
lib/board/src/: lib.rs
lib/board2d/: Cargo.toml
lib/board2d/src/: lib.rs
lib/game/: Cargo.toml
lib/game/src/: game.rs  lib.rs
lib/gamio/: Cargo.toml
lib/gamio/src/: lib.rs
lib/graph/: Cargo.toml  test.txt
lib/graph/src/: astar.rs  lib.rs  model.rs
lib/hexagon/: Cargo.toml
lib/hexagon/src/: lib.rs
lib/io/: Cargo.toml
lib/io/src/: lib.rs
lib/linearhexagon/: Cargo.toml
lib/linearhexagon/src/: lib.rs
lib/logger/: Cargo.toml
lib/logger/src/: lib.rs
lib/solver/: Cargo.toml
lib/solver/src/: bfs.rs  deep_search.rs  lib.rs  model.rs
lib/state/: Cargo.toml
lib/state/src/: lib.rs
src/ch_spring_2021/: Cargo.toml  TODOLIST
src/ch_spring_2021/resources/: starter.py
src/ch_spring_2021/src/: choose.rs  complete.rs  constant.rs  grow.rs  init.rs  linear_hexagon.rs  main.rs  model.rs  prepare.rs  seed.rs
src/ch_spring_2021_simu/: Cargo.toml
src/ch_spring_2021_simu/src/: actions.rs  constant.rs  init.rs  main.rs  model.rs  simu.rs  tools.rs
src/ch_spring_2023/: Cargo.toml
src/ch_spring_2023/src/: constant.rs  game_impl.rs  helper.rs  init.rs  main.rs  model.rs  primal_strategy.rs
src/ch_winter_2022/: Cargo.toml
src/ch_winter_2022/src/: finder.rs  game_impl.rs  helper.rs  init.rs  main.rs  model.rs  primal_strategy.rs  tools.rs
tools/: merger.sh
