[package]
name = "ch_spring_2021"
version = "0.1.0"
authors = ["Guillaume Escande <escande.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { path = "../../lib/graph" }
board = { path = "../../lib/board" }
game = { path = "../../lib/game" }
logger = { path = "../../lib/logger" }
gamio = { path = "../../lib/gamio" }
state = { path = "../../lib/state" }
linearhexagon = { path = "../../lib/linearhexagon" }
