[package]
name = "ch_spring_2021_simu"
version = "0.1.0"
authors = ["Guillaume Escande <escande.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../../lib/board" }
game = { path = "../../lib/game" }
solver = { path = "../../lib/solver" }
#graph = { path = "../../lib/graph" }
linearhexagon = { path = "../../lib/linearhexagon" }
