[package]
name = "ch_winter_2022"
version = "0.1.0"
authors = ["Guillaume Escande <escande.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../../lib/board" }
game = { path = "../../lib/game" }
logger = { path = "../../lib/logger" }
linearhexagon = { path = "../../lib/linearhexagon" }
rand = "0.8.5"
