[package]
name = "ch_winter_2022"
version = "0.1.0"
authors = ["Guillaume Escande <escande.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { path = "../../lib/graph" }
board = { path = "../../lib/board" }
board2d = { path = "../../lib/board2d" }
game = { path = "../../lib/game" }
logger = { path = "../../lib/logger" }
rand = "0.8.5"
